--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "d3": "^5.12.0"
+    "d3": "^5.12.0",
+    "papaparse": "^5.1.0"
   },
   "description": ""
 }
